changes made in form builder to handle form navigations while designing processes

--- a/views/directives-templates/my-checkbox.html
+++ b/views/directives-templates/my-checkbox.html
@@ -1,16 +1,21 @@
 <div class="settingBox">
 	<div class="settingHeader">
-		<div class="headLbl" ng-click="showDiv = !showDiv">{{fieldName}} <span class="required" ng-show="isRequired">*</span></div>
+		<div class="headLbl" ng-click="showDiv = !showDiv">{{field.fieldName}} <span class="required" ng-show="field.isRequired">*</span></div>
 		<div class="headClose" ng-click="removeMe()">X</div>
 	</div>
 	<div class="settingBody" ng-show="showDiv">
-		<div class='box'><label class="lbl">Field Type: checkbox</label></div>
-		<div class='box'><label class="lbl">Field Title: </label> <input type="text" value="{{fieldName}}" ng-model="fieldName" class="inputTxt" maxlength="100" /></div>
-		<div class='box'><label class="lbl">Field Default Value: </label> <input type="text" value="" class="inputTxt" maxlength="100" /></div>
+		<div class='box'><label class="lbl">Field Type: {{field.fieldType}}</label></div>
+		<div class='box'>
+			<label class="lbl">Field Title: </label> 
+			<input type="text" value="{{field.fieldName}}" ng-model="field.fieldName" class="inputTxt" maxlength="100" />
+		</div>
+		<div class='box'>
+			<label class="lbl">Field Default Value: </label> 
+			<input type="text" value="{{field.defaultValue}}" class="inputTxt" maxlength="100" ng-model='field.defaultValue' /></div>
 		<div class='box'>
 			<label class="lbl">Required: </label>
-			<Label><input type="radio" value="1" name="req" ng-click="isRequired = true" />&nbsp; Yes</label>
-			<label><input type="radio" value="0" name="req" ng-click="isRequired = false" />&nbsp; No</label>
+			<Label><input type="radio" value="1" name="req" ng-click="field.isRequired = true" ng-bind='field.isRequired' />&nbsp; Yes</label>
+			<label><input type="radio" value="0" name="req" ng-click="field.isRequired = false" ng-bind='field.isRequired' />&nbsp; No</label>
 		</div>
 	</div>
 </div>
