--- a/css/style.css
+++ b/css/style.css
@@ -76,12 +76,11 @@ a {
 }
 
 .previewContainer {
-	display: none;
 	float: left;
 	width: 38%;
 	height: 520px;
 	overflow: auto;
-	border: 1px solid blue;
+	border: 1px solid red;
 }
 
 .settingBox {
