--- a/views/directives-templates/my-image.html
+++ b/views/directives-templates/my-image.html
@@ -1,13 +1,13 @@
 <div class="settingBox">
 	<div class="settingHeader">
-		<div class="headLbl" ng-click="showDiv = !showDiv">{{field.fieldName}}</div>
+		<div class="headLbl" ng-click="showDiv = !showDiv">{{field.fieldName}} - {{field.fieldType}}</div>
 		<div class="headClose" ng-click="removeMe()">X</div>
 	</div>
 	<div class="settingBody" ng-show="showDiv">
 		<div class='box'><label class="lbl">Field Type: {{field.fieldType}}</label></div>
 		<div class='box'>
-			<label class="lbl">Field Title: </label> 
-			<input type="text" value="{{field.fieldName}}" ng-model="field.fieldName" class="inputTxt" maxlength="100" />
+			<label class="lbl">Image src: </label> 
+			<input type="text" value="{{field.defaultValue}}" class="inputTxt" maxlength="100" ng-model="field.defaultValue" />
 		</div>
 	</div>
 </div>
