--- a/views/directives-templates/my-text.html
+++ b/views/directives-templates/my-text.html
@@ -1,10 +1,12 @@
 <div class="settingBox">
 	<div class="settingHeader">
-		<div class="headLbl" ng-click="showDiv = !showDiv">{{field.fieldName}} <span class="required" ng-show="field.isRequired">*</span></div>
+		<div class="headLbl" ng-click="showDiv = !showDiv">{{field.fieldName}} - {{field.fieldType}} 
+			<span class="required" ng-show="field.isRequired">*</span>
+		</div>
 		<div class="headClose" ng-click="removeMe()">X</div>
 	</div>
 	<div class="settingBody" ng-show="showDiv">
-		<div class='box'><label class="lbl">Field Type: text</label></div>
+		<div class='box'><label class="lbl">Field Type: {{field.fieldType}}</label></div>
 		<div class='box'>
 			<label class="lbl">Field Title: </label> <input type="text" value="{{field.fieldName}}" ng-model="field.fieldName" class="inputTxt" maxlength="100" />
 		</div>
